third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/struct-with-fmt.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(fmt = core::fmt::Octal::fmt)]
pub struct Error(i32);

fn main() {}
